tests/fixtures/invalid/min_dict_str.py
# Cannot call min() with Dict[str, int], Str
x = min({"a": 1}, "hello")
